# lambOS

./: .gitignore  README.md
Code/: Cargo.toml  interrupt_handlers.c  ivt.s  lambos_linker.ld  makefile  memory.x
Code/src/: main.rs
docs/: default_stm32_firmware.bin.i64
lambos/: Cargo.toml  build.rs  memory.x
lambos/.cargo/: config.toml
lambos/src/: main.rs
lambos/src/boot/: bootloader.rs
src/: linker.ld  main.c  makefile  startup.c
