[package]
authors = ["d0xical"]
edition = "2018"
readme = "README.md"
name = "lambos"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.3.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
libm = "0.2"

[dependencies.stm32f4xx-hal]
features = ["stm32f411"]
version = "0.22.0"

# this lets you use `cargo fix`!
[[bin]]
name = "lambos"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
